--- a/Pages/Entries/Index.cshtml
+++ b/Pages/Entries/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @model PersonalJournalApp.Pages.Entries.IndexModel
+@using PersonalJournalApp.Models
 
 @{
 }
@@ -18,19 +19,22 @@
   </thead>
   
   <tbody>
-    <tr>
-      	<th scope="row">@Model.entries.Id</th>
-      	<td>@Model.entries.Title</td>
-      	<td>@Model.entries.Date</td>
-      	<td>@Model.entries.IsFavorite</td>
-    </tr>
-    <tr>
-		<td>
-			<a asp-page="/Privacy" type="button" class="btn btn-secondary">Details</a>
-			<a type="button" class="btn btn-info">Edit</a>
-			<a type="button" class="btn btn-danger">Delete</a>
-			
-		</td>
-    </tr>
+  @foreach (JournalEntry entry in @Model.entries)
+  	{
+	    <tr>
+	      	<th scope="row">@entry.Id</th>
+	      	<td>@entry.Title</td>
+	      	<td>@entry.Date</td>
+	      	<td>@entry.IsFavorite</td>
+	    </tr>
+	    <tr>
+			<td>
+				<a asp-page="/Privacy" type="button" class="btn btn-secondary">Details</a>
+				<a type="button" class="btn btn-info">Edit</a>
+				<a type="button" class="btn btn-danger">Delete</a>
+				
+			</td>
+	    </tr>
+	}
   </tbody>
 </table>
