--- a/Pages/Entries/Index.cshtml
+++ b/Pages/Entries/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-<h1>Journal Entries <button type="button" class="btn btn-dark">+</button></h1><br>
+<h1>Journal Entries <a asp-page="/Entries/Create" class="btn btn-dark">+</a></h1><br>
 
 <table class="table">
   <thead>
