--- a/Pages/Entries/Index.cshtml
+++ b/Pages/Entries/Index.cshtml
@@ -31,7 +31,7 @@
 			<td>
 				<a asp-page="/Privacy" type="button" class="btn btn-secondary">Details</a>
 				<a type="button" class="btn btn-info">Edit</a>
-				<a type="button" class="btn btn-danger">Delete</a>
+				<a asp-page="/Entries/Delete" asp-route-RemoveId="@entry.Id" class="btn btn-danger">Delete</a>
 				
 			</td>
 	    </tr>
