--- a/Pages/Entries/Index.cshtml
+++ b/Pages/Entries/Index.cshtml
@@ -29,7 +29,7 @@
 	    </tr>
 	    <tr>
 			<td>
-				<a asp-page="/Privacy" type="button" class="btn btn-secondary">Details</a>
+				<a asp-page="/Entries/View" asp-route-viewId="@entry.Id"  type="button" class="btn btn-secondary">Details</a>
 				<a asp-page="/Entries/Modify" asp-route-Id="@entry.Id"  type="button" class="btn btn-info">Edit</a>
 				<a asp-page="/Entries/Delete" asp-route-RemoveId="@entry.Id" class="btn btn-danger">Delete</a>
 				
